# libnexakotlin

./: README.md  build.gradle.kts  init_nexa_node.sh  settings.gradle.kts
.github/: Android.yml
.github/workflows/: Android.yml  iOS.yml
libnexa/: Makefile  build-android.sh  build-ios.sh  build.gradle.kts  nexa  nexa-config.h
libnexa/ringsigandroid/: CMakeLists.txt  ringsigandroid.cpp
src/androidMain/: AndroidManifest.xml
src/androidMain/cpp/: CMakeLists.txt  cmnexa  ndk-stl-config.cmake  nexakotlincpp.cpp  origCMakeLists.txt
src/androidMain/kotlin/bitcoinunlimited/libbitcoincash/: Platform.kt  libnexa.kt
src/androidMain/kotlin/net/kodein/demo/crypto/: Platform.kt
src/commonMain/kotlin/bitcoinunlimited/libbitcoincash/: Greeting.kt  Platform.kt  libnexa.kt  utils.kt
src/commonMain/kotlin/net/kodein/demo/crypto/: Greeting.kt  Platform.kt
src/commonTest/kotlin/bitcoinunlimited/libbitcoincash/: GreetingTest.kt  LibNexaTests.kt
src/commonTest/kotlin/net/kodein/demo/crypto/: GreetingTest.kt
src/iosMain/kotlin/bitcoinunlimited/libbitcoincash/: Platform.kt  libnexa.kt
src/iosMain/kotlin/net/kodein/demo/crypto/: Platform.kt
src/iosTest/kotlin/bitcoinunlimited/libbitcoincash/: empty.kt
src/nativeInterop/cinterop/: libnexa.def
